# Audio-Lyric-Alignment-via-Emotional-Sentiment

./: .gitignore  LICENSE  README.md  finetune.py  pyproject.toml  requirements.txt
Dataset/: DALIDataset.py  DALI_v1.0.zip:Zone.Identifier  README.md  data\segments_with_descriptions.jsonl  main.ipynb  main.py  my_annot_name.json  utils.ipynb
Dataset/data/: all_descriptions.json  broken_links.txt  parallel_description_requests.jsonl  parallel_description_requests2.jsonl  parallel_output2.jsonl  segments_with_descriptions.json
Dataset/utils/: audio_utils.py  constants.py  segment_descriptions.ipynb  sentiment-description.py  sentiment_description.py
notebooks/: api_request_parallel_processor.ipynb  eval.ipynb  main.ipynb  segment_descriptions.ipynb  sentiment-description.ipynb
scripts/: api_request_parallel_processor.ipynb  download_data.py  evaluate.py  finetune.py  main.ipynb  main2.ipynb  monitor_git.py  segment_descriptions.ipynb  sentiment-description.ipynb  spectrograms.ipynb
