[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-lyric-alignment"
version = "0.1.0"
description = "Audio-lyric alignment via emotional sentiment (CLAP fine-tuning)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Aimon Benfield-Chand" },
    { name = "Donovan Clay" },
    { name = "Javon Hickmon" },
]
dependencies = [
    "torch",
    "torchaudio",
    "transformers",
    "numpy",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
data = ["yt-dlp", "openai", "tiktoken", "aiohttp"]

[tool.setuptools.packages.find]
include = ["Dataset*"]
